Updates ustvnow streaming APIs. Fixes #3 #4

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ xcodeproj/project.pbxproj
 xcuserdata
 !*.xcodeproj/project.pbxproj
 !*.xcworkspace/contents.xcworkspacedata
+Gemfile.lock
+Podfile.lock
